--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -31,6 +31,7 @@
         "checksVoidReturn": false
       }
     ],
+    "@typescript-eslint/method-signature-style": ["error", "method"],
     "comma-dangle": ["error", "never"]
   }
 }
