--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "extends": [
     "standard-with-typescript",
+    "plugin:jest/recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended",
     "eslint:recommended",
@@ -14,7 +15,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "prettier", "jest"],
+  "ignorePatterns": ["jest.config.js"],
   "rules": {
     "prettier/prettier": [
       "error",
