--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test:unit": "ENV_FILE=./config/.env.test jest",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +17,10 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.4.0",
@@ -26,14 +29,17 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "npm": "^10.4.0",
     "pg": "^8.11.3",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
