--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,9 @@ out/
 .DS_Store
 Thumbs.db
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
