--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
