--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.2",
     "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
