--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts",
     "test:unit": "ENV_FILE=./config/.env.test jest",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc -outDir dist"
   },
   "keywords": [],
   "author": "",
@@ -36,7 +37,6 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
     "install": "^0.13.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
