--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "target": "es2016",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
-    "strict": true,
     "noEmitOnError": true,
-    "skipLibCheck": true,
-    "outDir": "./build",
+    "outDir": "./dist",
     "rootDir": "./src",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
     "sourceMap": true,
+    "strict": true,
     "types": ["jest"]
   },
   "include": ["src/**/*.ts"],
