--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,8 +12,7 @@
     "rootDir": "./src",
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
-    "types": ["jest"]
+    "strict": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
