--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,5 +15,5 @@
     "strict": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
