changes in docker and fly.toml files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,41 +1,50 @@
-# syntax = docker/dockerfile:1
+# syntax=docker/dockerfile:1
 
-# Adjust NODE_VERSION as desired
+# Use a specific version of Node.js as the base image
 ARG NODE_VERSION=20.11.0
-FROM node:${NODE_VERSION}-slim as base
+FROM node:${NODE_VERSION}-slim AS build
 
-LABEL fly_launch_runtime="Node.js"
-
-# Node.js app lives here
+# Set the working directory in the container
 WORKDIR /app
 
-# Set production environment
-ENV NODE_ENV="production"
-
-
-# Throw-away build stage to reduce size of final image
-FROM base as build
-
-# Install packages needed to build node modules
+# Install system dependencies required for native npm module compilation
 RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y build-essential node-gyp pkg-config python-is-python3
+    apt-get install -y build-essential node-gyp pkg-config python-is-python3 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install node modules
-COPY --link package-lock.json package.json ./
+# Copy package.json and package-lock.json (or npm-shrinkwrap.json) for npm install
+COPY package*.json ./
+
+# Install npm dependencies including 'devDependencies'
 RUN npm ci
 
-# Copy application code
-COPY --link . .
+# Copy the rest of the application code
+COPY . .
 
-# Compile TypeScript to JavaScript
+# Build the application (uncomment the next line if your project needs a build step, e.g., TypeScript compilation)
 RUN npm run build
 
-# Final stage for app image
-FROM base
+# Start a new, final image to reduce size
+FROM node:${NODE_VERSION}-slim AS production
 
-# Copy built application
-COPY --from=build /app /app
+# Set NODE_ENV environment variable to production for this stage
+ENV NODE_ENV=production
 
-# Start the server by default, this can be overwritten at runtime
-EXPOSE 3000
-CMD [ "node", "dist/src/server.js" ]
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy built assets from the 'build' stage
+COPY --from=build /app/dist ./dist
+
+# Copy package.json and package-lock.json for npm install in production mode
+COPY package*.json ./
+
+# Install only production dependencies
+RUN npm install --only=production
+
+# Expose the port the app runs on
+EXPOSE 3001
+
+# Command to run the application
+CMD ["node", "dist/server.js"]
