--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -42,4 +42,4 @@ COPY --from=build /app /app
 
 # Start the server by default, this can be overwritten at runtime
 EXPOSE 3000
-CMD [ "node", "dist/server.js"]
+CMD [ "node", "dist/src/server.js"]
