--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --exec ts-node src/server.ts",
     "test:unit": "ENV_FILE=./config/.env.test jest",
     "test": "jest --config jest.config.js",
-    "build": "tsc -outDir dist"
+    "build": "tsc -outDir dist/src"
   },
   "keywords": [],
   "author": "",
