--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "commonjs",
     "noImplicitAny": true,
     "noEmitOnError": true,
-    "outDir": "./dist",
+    "outDir": "./dist/src",
     "rootDir": "./src",
     "skipLibCheck": true,
     "sourceMap": true,
