--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
-    "test:unit": "ENV_FILE=./config/.env.test jest",
-    "test": "jest --config jest.config.js",
-    "build": "tsc -outDir dist/src"
+    "test": "jest",
+    "build": "tsc -outDir dist/src",
+    "lint": "eslint src/**/*.ts tests/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.4.0",
     "dotenv": "^16.4.4",
@@ -42,6 +43,7 @@
     "nodemon": "^3.0.3",
     "npm": "^10.4.0",
     "pg": "^8.11.3",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
