--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,21 +1,21 @@
 {
   "env": {
-    "browser": true,
+    "node": true,
     "es2021": true
   },
   "extends": [
-    "standard-with-typescript",
     "plugin:jest/recommended",
-    "plugin:react/recommended",
     "plugin:prettier/recommended",
     "eslint:recommended",
-    "prettier"
+    "prettier",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier", "jest"],
+  "plugins": ["prettier", "jest"],
   "ignorePatterns": ["jest.config.js"],
   "rules": {
     "prettier/prettier": [
@@ -27,24 +27,6 @@
       }
     ],
     "@typescript-eslint/quotes": ["error", "single", { "avoidEscape": true }],
-    "@typescript-eslint/no-misused-promises": [
-      "error",
-      {
-        "checksVoidReturn": false
-      }
-    ],
-    "@typescript-eslint/method-signature-style": ["error", "method"],
     "comma-dangle": ["error", "never"]
-  },
-  "overrides": [
-    {
-      "files": ["tests/**/*.ts", "tests/**/*.tsx"],
-      "env": {
-        "jest": true
-      },
-      "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
-      }
-    }
-  ]
+  }
 }
