adjust lint frontend

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -20,5 +20,13 @@
     "react": {
       "version": "detect"
     }
-  }
+  },
+  "overrides": [
+    {
+      "files": ["jest.config.js", "**/*.config.js"],
+      "env": {
+        "node": true
+      }
+    }
+  ]
 }
