--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,9 @@
       "files": ["jest.config.js", "**/*.config.js"],
       "env": {
         "node": true
+      },
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
       }
     }
   ]
