--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,3 +55,28 @@ jobs:
       - name: Frontend tests
         working-directory: ./frontend
         run: npm test
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm install
+      - name: Build backend
+        working-directory: ./backend
+        run: npm run build
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm install
+      - name: Build frontend
+        working-directory: ./frontend
+        run: npm run build
