--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -15,7 +15,11 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "react", "react-hooks"],
-  "rules": { "react/react-in-jsx-scope": "off", "react/jsx-uses-react": "off" },
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off",
+    "react/prop-types": "off"
+  },
   "settings": {
     "react": {
       "version": "detect"
