--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,8 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^axios$": "axios/dist/node/axios.cjs"
+      "^axios$": "axios/dist/node/axios.cjs",
+      "^@/(.*)$": "<rootDir>/src/$1"
     }
   },
   "devDependencies": {
